--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,10 @@
   <script src="https://browser.sentry-cdn.com/5.15.5/bundle.min.js" crossorigin="anonymous"></script>
 
   <!-- Configure SDK -->
-  <script>
+  <script src="">
     Sentry.init({
-      dsn: 'cf65e3e57dd548a086a1631f6ba6467bf8d902042ce14503a77536192840ebee'
+      dsn: 'https://5553cd9a287f4f9ea102b13aeb13cb67@o416919.ingest.sentry.io/5314228',
+      release: "%REACT_APP_RELEASE_VERSION%"
     });
   </script>
   <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
