--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 
 <body>
   <noscript>
-    You need to enable JavaScript to run this app. 123
+    You need to enable JavaScript to run this app
   </noscript>
   <div id="root" class="root"></div>
   <!--
