--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
     Sentry.init({
       dsn:
         "https://2331ef4ccd3f4cbabaac2a6f510a8edc@o416919.ingest.sentry.io/5315536",
+      release: "react"
     });
   </script>
   <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet" />
